[tool.poetry]
name = "error-reaper"
version = "0.1.0"
description = "Test task for Meowpunk"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "GPLv3"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
tqdm = "^4.66.1"
sqlalchemy = "^2.0.20"
pandas = "^2.1.0"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
matplotlib = "^3.8.0"
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
jedi = "^0.19.0"
yapf = "^0.40.1"
autopep8 = "^2.0.2"
mypy = "^1.5.0"

[tool.mypy]
pretty = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.poetry.scripts]
error-reaper = "error_reaper.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
